--- a/VotingSystem.UI/Pages/Index.cshtml
+++ b/VotingSystem.UI/Pages/Index.cshtml
@@ -4,4 +4,12 @@
 }
 
 <h1>Razor index page</h1>
-<h2>@Model.Id</h2>
+
+<h2>@Model.Poll.Title</h2>
+
+<h2>@Model.Poll.Description</h2>
+
+@foreach (var counter in Model.Poll.Counters)
+{
+    <p>@counter.Name - @counter.Count </p>
+}
