Add antiforgery token to razor page so that we can hit hte debug of OnPost

--- a/VotingSystem.UI/Pages/Index.cshtml
+++ b/VotingSystem.UI/Pages/Index.cshtml
@@ -6,6 +6,7 @@
 <h1>Razor index page</h1>
 
 <form method="post">
+    @Html.AntiForgeryToken()
     <input name="Request.Title" />
     <button type="submit">Submit</button>
 </form>
