Understanding what the asp-for is and adding the other properties for the request.

--- a/VotingSystem.UI/Pages/Index.cshtml
+++ b/VotingSystem.UI/Pages/Index.cshtml
@@ -9,6 +9,10 @@
 <form method="post">
     @*@Html.AntiForgeryToken()*@
     <input asp-for="Form.Title" />
+    <input asp-for="Form.Description" />
+    <input asp-for="Form.Names[0]" />
+    <input asp-for="Form.Names[1]" />
+    <input asp-for="Form.Names[2]" />
     <button type="submit">Submit</button>
 </form>
 
