--- a/VotingSystem.UI/Pages/Index.cshtml
+++ b/VotingSystem.UI/Pages/Index.cshtml
@@ -16,3 +16,16 @@
     <button type="submit">Submit</button>
 </form>
 
+@if(Model.Poll != null)
+{
+    <h1>Razor index page</h1>
+    
+    <h2>@Model.Poll.Title</h2>
+    
+    <h2>@Model.Poll.Description</h2>
+    
+    @foreach (var counter in Model.Poll.Counters)
+    {
+        <p>@counter.Name - @counter.Count </p>
+    }
+}
