--- a/VotingSystem.UI/Pages/Index.cshtml
+++ b/VotingSystem.UI/Pages/Index.cshtml
@@ -6,6 +6,12 @@
 
 <h1>Razor index page</h1>
 
+@foreach (var poll in Model.VotingPolls)
+{
+    <a>@poll.Title</a>
+}
+
+
 <form method="post">
     @*@Html.AntiForgeryToken()*@
     <input asp-for="Form.Title" />
@@ -16,16 +22,3 @@
     <button type="submit">Submit</button>
 </form>
 
-@if(Model.Poll != null)
-{
-    <h1>Razor index page</h1>
-    
-    <h2>@Model.Poll.Title</h2>
-    
-    <h2>@Model.Poll.Description</h2>
-    
-    @foreach (var counter in Model.Poll.Counters)
-    {
-        <p>@counter.Name - @counter.Count </p>
-    }
-}
