Make test fail that retrieves the poll from the database

--- a/VotingSystem.UI/Pages/Poll.cshtml
+++ b/VotingSystem.UI/Pages/Poll.cshtml
@@ -12,6 +12,7 @@
         <p>@counter.Name = @counter.Count - @counter.Percentage</p>
 
         <form method="post"> 
+            @Html.AntiForgeryToken()
             <input type="hidden" name="counterId" value="@counter.Id" />
         </form>
 
